--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+input:focus {
+  border-color:#d45555 !important;
+}
+input {
+  border-color:#d45555 !important;
+  padding: 4px !important;
+}
